--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.5.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
